--- a/client/src/components/ProductItem/styles.css
+++ b/client/src/components/ProductItem/styles.css
@@ -8,6 +8,10 @@
   box-shadow: 0 13px 27px -5px hsla(240, 30.1%, 28%, 0.25),
     0 8px 16px -8px hsla(0, 0%, 0%, 0.3), 0 -6px 16px -6px hsla(0, 0%, 0%, 0.03);
   transition: all ease 200ms;
+  height: 430px;
+
+  --lh: 1.4rem;
+  line-height: var(--lh);
 }
 
 .card:hover {
@@ -19,7 +23,6 @@
 
 .card img {
   width: 100%;
-  object-fit: cover;
 }
 
 .card h2 {
@@ -34,6 +37,10 @@
 
 .card p {
   color: #fff;
+  overflow: hidden;
+  display: -webkit-box;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
 }
 
 .card h5 {
@@ -49,13 +56,13 @@
 }
 
 .pink {
-  background: linear-gradient(to right, #fd4dac, #7a0141) !important;
+  background: linear-gradient(to right, #fd4dac, #fe86c6) !important;
 }
 
 .orange {
-  background: linear-gradient(to right, #a24f02, #fe9e44) !important;
+  background: linear-gradient(to right, #fe6b48, #fe8e72) !important;
 }
 
 .purple {
-  background: linear-gradient(to right, #9227fb, #330363) !important;
+  background: linear-gradient(to right, #9227fb, #ad5ffc) !important;
 }
