fe changes to cards && auth pages

--- a/client/src/indexRef.css
+++ b/client/src/indexRef.css
@@ -79,8 +79,8 @@ a:hover {
   text-decoration: underline;
 } */
 
-header {
-  background: var(--primary);
+section h3 {
+  background: var(--purple);
 }
 
 header a {
