--- a/client/src/components/ProductItem/styles.css
+++ b/client/src/components/ProductItem/styles.css
@@ -1,4 +1,4 @@
-.card {
+.Card {
   background: #fff;
   width: 24em;
   border-radius: 0.6em;
@@ -14,18 +14,18 @@
   line-height: var(--lh);
 }
 
-.card:hover {
+.Card:hover {
   transform: scale(1.03);
   box-shadow: 0 13px 40px -5px hsla(240, 30.1%, 28%, 0.12),
     0 8px 32px -8px hsla(0, 0%, 0%, 0.14),
     0 -6px 32px -6px hsla(0, 0%, 0%, 0.02);
 }
 
-.card img {
+.Card img {
   width: 100%;
 }
 
-.card h2 {
+.Card h2 {
   color: #fff;
   margin-top: -0.2em;
   line-height: 1.4;
@@ -35,7 +35,7 @@
   transition: all ease-in 100ms;
 }
 
-.card p {
+.Card p {
   color: #fff;
   overflow: hidden;
   display: -webkit-box;
@@ -43,7 +43,7 @@
   -webkit-box-orient: vertical;
 }
 
-.card h5 {
+.Card h5 {
   color: #fff;
   font-weight: 700;
   font-size: 1em;
@@ -51,8 +51,8 @@
   margin: 1.4em 0 0 0;
 }
 
-.card-body {
-  padding: 1.2em;
+.Card-body {
+  padding: 2.5em;
 }
 
 .pink {
