--- a/client/src/components/ProductItem/styles.css
+++ b/client/src/components/ProductItem/styles.css
@@ -35,11 +35,16 @@
   transition: all ease-in 100ms;
 }
 
+.Card span {
+  font-size: 1em;
+  color: #fff;
+}
+
 .Card p {
   color: #fff;
   overflow: hidden;
   display: -webkit-box;
-  -webkit-line-clamp: 3;
+  -webkit-line-clamp: 4;
   -webkit-box-orient: vertical;
 }
 
@@ -52,7 +57,7 @@
 }
 
 .Card-body {
-  padding: 2.5em;
+  padding: 1em 1em 6em 1em;
 }
 
 .pink {
