--- a/client/src/components/ProductItem/styles.css
+++ b/client/src/components/ProductItem/styles.css
@@ -12,6 +12,8 @@
 
   --lh: 1.4rem;
   line-height: var(--lh);
+
+  position: relative;
 }
 
 .Card:hover {
@@ -70,4 +72,13 @@
 
 .purple {
   background: linear-gradient(to right, #9227fb, #ad5ffc) !important;
+}
+
+.overlay-div {
+  height: 100%;
+  width: 100%;
+  position: absolute;
+  background-color: grey;
+  opacity: 0.7;
+  color: white;
 }
