--- a/client/src/components/ProductItem/styles.css
+++ b/client/src/components/ProductItem/styles.css
@@ -82,3 +82,10 @@
   opacity: 0.7;
   color: white;
 }
+
+.owner-div {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  text-shadow: 2px 2px 6px black;
+}
