--- a/client/src/components/ProductItem/styles.css
+++ b/client/src/components/ProductItem/styles.css
@@ -82,3 +82,15 @@
   opacity: 0.7;
   color: white;
 }
+
+@media screen and (max-width: 768px) {
+  @media screen and (max-width: 768px) {
+    .Card {
+      width: 95%;
+    }
+
+    .Card-body {
+      padding: 1em 1em 9em 1em;
+    }
+  }
+}
