added responsiveness to profile page

--- a/client/src/components/AddButton/style.css
+++ b/client/src/components/AddButton/style.css
@@ -1,11 +1,16 @@
 .btn-size {
-    width: 30%;
-    background-color:#9227FB;
-    border-color: #9227FB;
+  width: 30%;
+  background-color: #9227fb;
+  border-color: #9227fb;
 }
 
 .btn-size:hover {
-    background-color:#9227FB;
-    border-color: #9227FB;
+  background-color: #9227fb;
+  border-color: #9227fb;
 }
 
+@media screen and (max-width: 1024px) {
+  .btn-size {
+    width: fit-content;
+  }
+}
